# spark_connect_proxy

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: test.yml
src/spark_connect_proxy/: __init__.py  __main__.py  auth.py  config.py  proxy.py
tests/: test_auth.py  test_config.py  test_proxy.py
